Polish Translation Added
Translated by: Penguin#8831 (Discord ID: 810747545349128192)
Message Link: https://discord.com/channels/730812691068747817/818537892187078736/880186093692149842

--- a/Translations/JukeBoxPlus Translations.yml
+++ b/Translations/JukeBoxPlus Translations.yml
@@ -42,6 +42,19 @@ message-choose-record-first: "Choose a record first."
 #message-radius: "&6Radius"
 #message-choose-record-first: "Choose a record first."
 
+##### Polish
+#message-added-disc: "Dodano {NAME} do szafy grającej"
+#message-already-added: "Ta szafa grająca już zawiera {NAME}."
+#message-enabled: "&aWłączony"
+#message-disabled: "&cWyłączony"
+#message-loop: "&6pętla"
+#message-shuffle: "&6Mieszanie"
+#message-autostart: "&6Autostart"
+#message-now-playing: "&aTeraz Gra {NAME}."
+#message-stop: "&6Stop"
+#message-radius: "&6Zasięg"
+#message-choose-record-first: "Najpierw wybierz płytę."
+
 ##### Russian
 #message-added-disc: "{NAME} добавлена в Проигрыватель"
 #message-already-added: "В этом Проигрывателе уже есть {NAME}."
