--- a/Translations/AngelChest Translations.yml
+++ b/Translations/AngelChest Translations.yml
@@ -1,4 +1,4 @@
-﻿message-all-your-angelchests-were-already-unlocked: "&eAll your AngelChests were already unlocked."
+message-all-your-angelchests-were-already-unlocked: "&eAll your AngelChests were already unlocked."
 message-angelchest-created: "&aAn Angel collected your stuff and put it into a chest located at the place of your death."
 message-angelchest-disappeared: "&cYou were too slow... Your AngelChest has disappeared and dropped its contents."
 message-error-players-only: "&cError: This command can only be used by players."
@@ -37,12 +37,57 @@ message-angelchest-fetched: "&aAngelChest fetched succesfully."
 message-angelchest-teleported: "&aSuccessfully teleported you to your AngelChest."
 message-min-distance: "&cYou already are nearby your AngelChest."
 message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 #########################
 ##### Translations ######
 #########################
 
-# Here are some community made translations
+# Here are some community made translations - to use one, just uncomment them by removing the
+# single hashtag (#) symbol at the beginning of each line. Do NOT uncomment the name of the language.
+# Of course you can also edit the translations.
+
+##### English
+#message-all-your-angelchests-were-already-unlocked: "&eAll your AngelChests were already unlocked."
+#message-angelchest-created: "&aAn Angel collected your stuff and put it into a chest located at the place of your death."
+#message-angelchest-disappeared: "&cYou were too slow... Your AngelChest has disappeared and dropped its contents."
+#message-error-players-only: "&cError: This command can only be used by players."
+#message-inventory-was-empty: "&eAn Angel searched for your stuff but could not find anything."
+#message-not-allowed-to-break-other-angelchests: "&cYou are not allowed to break this AngelChest."
+#message-not-allowed-to-open-other-angelchests: "&cYou are not allowed to open this AngelChest."
+#message-unlocked-more-angelchests: "&aYou have unlocked %d AngelChests."
+#message-unlocked-one-angelchest: "&aYou have unlocked your AngelChest."
+#message-you-dont-have-any-angelchests: "&eYou don't have any AngelChests."
+#message-you-got-part-of-your-inventory-back: "&eYou got a part of your inventory back, but some items are still in the AngelChest."
+#message-you-got-your-inventory-back: "&aYou got your inventory back!"
+#message-angelchest-location: "&eLocations of your AngelChests:"
+#message-not-enough-money: "&cYou don't have enough money."
+#message-not-enough-money2: "&cAn Angel tried to collect your stuff but you didn't have enough money."
+#message-please-select-chest: "&7Please specify which AngelChest you would like to select."
+#message-already-unlocked: "&cThis AngelChest is already unlocked."
+#message-too-many-angelchests: "&cYou had more AngelChests than your Angel could handle... Your oldest AngelChest has exploded."
+#message-no-angelchest-in-pvp: "&cAn Angel tried to collect your stuff but was put to flight by the presence of your killer."
+#message-angelchest-retrieved: "&aAngelChest retrieved!"
+#message-confirm: "&6You are about to spend {price}{currency}. Click this message to continue."
+#message-paid-open: "&8You spent {price}{currency} to open an AngelChest."
+#message-unlocked-automatically: "&8Your AngelChest has been unlocked automatically."
+#message-angelchest-opened: "&6{player} has opened your AngelChest."
+#message-angelchest-emptied: "&c{player} has emptied your AngelChest."
+#message-spawn-chance-unsuccessful: "&cYour Angel forgot to collect your stuff, unlucky!"
+#message-no-permission: "&cYou do not have the permission to use this command."
+#message-invulnerable: "&a&lYou are invulnerable for {time}."
+#message-vulnerable: "&c&lYou are no longer invulnerable."
+#message-tp-across-worlds-not-allowed: "&cYou cannot teleport to your AngelChest across worlds."
+#message-fetch-across-worlds-not-allowed: "&cYou cannot fetch your AngelChest across worlds."
+#message-max-tp-distance: "&cYou cannot teleport to AngelChests more than {distance} blocks away."
+#message-max-fetch-distance: "&cYou cannot fetch AngelChests more than {distance} blocks away."
+#message-angelchest-disabled: "&cYou are no longer protected by Angels."
+#message-angelchest-enabled: "&aYou are now protected by Angels."
+#message-angelchest-fetched: "&aAngelChest fetched succesfully."
+#message-angelchest-teleported: "&aSuccessfully teleported you to your AngelChest."
+#message-min-distance: "&cYou already are nearby your AngelChest."
+#message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Azerbaijan Turkish
 #message-all-your-angelchests-were-already-unlocked: "&eBütün AngelChest'lərinin kilidi onsuzda açıqdır."
@@ -83,6 +128,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aSuccessfully teleported you to your AngelChest."
 #message-min-distance: "&cYou already are nearby your AngelChest."
 #message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Bulgarian
 #message-all-your-angelchests-were-already-unlocked: "&eВсичките Ваши AngelChest-ове бяха отключени."
@@ -124,6 +170,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aУспешно Ви телепортирахме до Вашия AngelChest."
 #message-min-distance: "&cВие вече сте в близост до Вашия AngelChest."
 #message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Chinese Simplified 简体中文
 #message-all-your-angelchests-were-already-unlocked: "&e你所有的天使之箱都已解锁."
@@ -165,6 +212,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aSuccessfully teleported you to your AngelChest."
 #message-min-distance: "&cYou already are nearby your AngelChest."
 #message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Chinese Traditional 繁體中文
 #message-all-your-angelchests-were-already-unlocked: "&e所有的天使之箱已被解鎖"
@@ -206,6 +254,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aSuccessfully teleported you to your AngelChest."
 #message-min-distance: "&cYou already are nearby your AngelChest."
 #message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Dutch
 #message-all-your-angelchests-were-already-unlocked: "&eAlle AngelChests die je hebt zijn al ontgrendeld"
@@ -247,6 +296,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aSucesvol getelporteerd naar je AngelChest."
 #message-min-distance: "&cJe bent al in de buurt van je AngelChest."
 #message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### French - Thanks to AngelCynara for translating! -> https://www.spigotmc.org/members/angelcynara.398643/ 
 #message-all-your-angelchests-were-already-unlocked: "&eTout vos AngeCoffres sont débloqués."
@@ -288,6 +338,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aSuccessfully teleported you to your AngelChest."
 #message-min-distance: "&cYou already are nearby your AngelChest."
 #message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### German
 #message-all-your-angelchests-were-already-unlocked: "&eAlle deine AngelChests waren bereits aufgeschlossen."
@@ -329,6 +380,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aErfolgreich zur AngelChest teleportiert."
 #message-min-distance: "&cDu bist schon in der Nähe deiner AngelChest."
 #message-buried-in-graveyard: "&aEin Engel hat deine Sachen eingesammelt und in &6{graveyard} &avergraben."
+#message-cant-fetch-here: "&cDu kannst deine AngelChest nicht hierhin holen."
 
 ##### Hungarian
 # message-all-your-angelchests-were-already-unlocked: "&eAz összes AngyalLádád már fel van oldva."
@@ -370,6 +422,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aSikeresen teleportáltál az AngyalLádádhoz."
 #message-min-distance: "&cMár az AngyalLádád közelében vagy."
 #message-buried-in-graveyard: "&aEgy Angyal összegyűjtötte a cókmókjaidat, és elásta a(z) &6{graveyard} helyen."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Indonesian
 #message-all-your-angelchests-were-already-unlocked: "&eSemua AngelChest kamu sudah tidak terkunci."
@@ -411,6 +464,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aSuccessfully teleported you to your AngelChest."
 #message-min-distance: "&cYou already are nearby your AngelChest."
 #message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Italian
 #message-all-your-angelchests-were-already-unlocked: "&eTutte le tue AngelChests sono già state sbloccate."
@@ -452,6 +506,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aSuccessfully teleported you to your AngelChest."
 #message-min-distance: "&cYou already are nearby your AngelChest."
 #message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Pirate Speak
 #message-all-your-angelchests-were-already-unlocked: "&eAll yer AngelChests was already unlocked."
@@ -493,6 +548,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aSuccessfully teleported ye to yer AngelChest."
 #message-min-distance: "&cYe already be nearby yer AngelChest."
 #message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Polish
 #message-all-your-angelchests-were-already-unlocked: "&eWszystkie twoje AnielskieSkrzynie zostały już odblokowane."
@@ -534,6 +590,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aSuccessfully teleported you to your AngelChest."
 #message-min-distance: "&cYou already are nearby your AngelChest."
 #message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Portuguese
 #message-all-your-angelchests-were-already-unlocked: "&eTodos os seus AngelChests estavam desbloqueados."
@@ -575,6 +632,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aSuccessfully teleported you to your AngelChest."
 #message-min-distance: "&cYou already are nearby your AngelChest."
 #message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Russian - Thanks to @GEEK for translating
 #message-all-your-angelchests-were-already-unlocked: "&eВсе ваши Ангельские сундуки разблокированы."
@@ -616,6 +674,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aВы были успешно телепортированы к вашему Ангельскому сундуку."
 #message-min-distance: "&cВы уже находитесь вблизи своего Ангельского сундука."
 #message-buried-in-graveyard: "&aАнгел собрал ваши вещи и закопал в месте под названием &6{graveyard}&a."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Spanish Spain (es_ES)
 #message-all-your-angelchests-were-already-unlocked: "&eTodos tus Artefactos Angelicales se han desprotegido."
@@ -657,6 +716,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aHas aparecido junto a tu Artefacto Angelical."
 #message-min-distance: "&cEstás demasiado cerca de tu Artefacto Angelical."
 #message-buried-in-graveyard: "&aEl Artefacto Angelical ha recogido tus cosas y las ha enterrado en &6{graveyard}&a."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Spanish 2
 #message-all-your-angelchests-were-already-unlocked: "&eTodos tus AngelChest ya se encuentran desbloqueados."
@@ -698,6 +758,7 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aTe has teletransportado exitosamente a tu AngelChest."
 #message-min-distance: "&cYa estás cerca de tu AngelChest."
 #message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &6{graveyard}."
+#message-cant-fetch-here: "&cYou cannot fetch your AngelChest here."
 
 ##### Turkish (Turkey Turkish)
 #message-all-your-angelchests-were-already-unlocked: "&eTüm AngelChest'lerinin kilidi zaten açık."
@@ -738,3 +799,4 @@ message-buried-in-graveyard: "&aAn Angel collected your stuff and buried it at &
 #message-angelchest-teleported: "&aAngelChest'ine başarıyla ışınlanıldı."
 #message-min-distance: "&cZaten AngelChest'inin yakınındasın."
 #message-buried-in-graveyard: "&aBir melek eşyalarını topladı ve bir &{graveyard}&a'a gömdü."
+#message-cant-fetch-here: "&cAngelChest'ini buraya getiremezsin."
