--- a/Translations/RePlant/nl.yml
+++ b/Translations/RePlant/nl.yml
@@ -3,4 +3,4 @@
 config-reloaded: "&aInstellingen zijn herladen."
 replant-crops-enabled: "&6Herplanten van gewassen is nu &aingeschakeld&6."
 replant-crops-disabled: "&6Herplanten van gewassen is nu &cuitgeschakeld&6."
-no-permission: "&cI'm sorry, but you do not have permission to perform this commmand."
+no-permission: "&cHet spijt me, maar u heeft geen permissies om dit commando uit te voeren."
